[tool.poetry]
name = "security-situation-analysis"
version = "0.1.0"
description = ""
authors = ["abdoulfataoh <abdoulfataoh@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
beautifulsoup4 = "^4.11.1"
Unidecode = "^1.3.4"
aiohttp = "3.7.4.post0"
requests = "2.25.1"
streamlit = "^1.13.0"
plotly = "^5.10.0"
scipy = "^1.9.1"

[tool.poetry.dev-dependencies]
mypy = "^0.971"
ipython = "^8.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
